--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -29,6 +29,9 @@
     <main class="container mx-auto p-4 max-w-4xl">
         {{template "content" .}}
     </main>
+
+    <!-- Global toast container -->
+    <div id="toast-container" class="toast toast-top toast-end z-50"></div>
 </body>
 </html>
 
