--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -31,7 +31,7 @@
                     </svg>
                     Chores
                 </h2>
-                <p class="text-base-content/60">No chores assigned</p>
+                {{template "chore-summary-widget" .}}
                 <div class="card-actions justify-end mt-2">
                     <button class="btn btn-sm btn-ghost"
                             hx-get="/partials/chores"
